# Project-Freyja

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
freyja-engine/: Cargo.toml
freyja-nnue/: training_combined.jsonl  weights.fnnue
freyja-ui/: index.html  package-lock.json  package.json  vite.config.ts
freyja-ui/src-tauri/: Cargo.toml  tauri.conf.json
freyja-ui/src-tauri/src/: engine.rs  lib.rs  main.rs
masterplan/: 4PC_RULES_REFERENCE.md  AGENT_CONDUCT.md  DECISIONS.md  HANDOFF.md  MASTERPLAN.md  STATUS.md  audit_log_stage_00.md  audit_log_stage_01.md  audit_log_stage_02.md  audit_log_stage_03.md  audit_log_stage_04.md  audit_log_stage_05.md  audit_log_stage_06.md  audit_log_stage_08.md  audit_log_stage_09.md  audit_log_stage_10.md  audit_log_stage_11.md  audit_log_stage_12.md  audit_log_stage_13.md  audit_log_stage_14.md  audit_log_stage_15.md  downstream_log_stage_00.md  downstream_log_stage_01.md  downstream_log_stage_02.md  downstream_log_stage_03.md  downstream_log_stage_04.md  downstream_log_stage_06.md  downstream_log_stage_08.md  downstream_log_stage_09.md  downstream_log_stage_10.md  downstream_log_stage_11.md  downstream_log_stage_12.md  downstream_log_stage_13.md  downstream_log_stage_14.md  downstream_log_stage_15.md  tier_boundary_review_2.md  tier_boundary_review_3.md  tier_boundary_review_4.md  tier_boundary_review_5.md
observer/: ab_runner.mjs  config.json  config_100games.json  config_10games_d4.json  config_10games_mt.json  config_ab_beam.json  config_ab_beam_d4.json  config_ab_oma.json  config_ab_oppratio.json  config_ab_oppratio_d4.json  (+23 more)
(+133 files in other folders)
