[package]
name = "freyja-ui"
version = "0.1.0"
edition = "2021"
description = "Project Freyja — 4-Player Chess UI Shell"

[lib]
name = "freyja_ui_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
